# simple_echo

./: .clang-format  CMakeLists.txt  README.md  client.c  makefile  server.c  utils.h
.cache/clangd/index/: client.c.49D1FA4465AF7814.idx  co_cond.c.535783D83477DDF7.idx  co_cond.h.B3792B1C7D8BC38C.idx  co_mutex.c.6D8251E1A1766819.idx  co_mutex.h.718F7BAD745A8F30.idx  coheader.h.088A9613F0D6F72D.idx  context.S.B8F98ADBD25D56D2.idx  context.c.B199ADDB7B896978.idx  context.h.9BBB1E2C412F5C81.idx  coroutine.c.FCBF2431F6D7000D.idx  coroutine.h.B23D198AD8A64BFA.idx  event_manager.c.5534D12AEA8AA037.idx  event_manager.h.B595D79BC7CBE0F2.idx  hook.c.9D0908065865CECF.idx  hook.h.E3093D2C6728F315.idx  log.c.A6CCA42C054E447C.idx  log.h.060F5B2561FC25AB.idx  server.c.4D5BB20D249F625D.idx  utils.c.DEDEEDFD92B46D10.idx  utils.h.69687765200AB960.idx  utils.h.A2D4CA774F541644.idx
